[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/sprites/ui/text_music_1.png" type="Texture" id=1]
[ext_resource path="res://scripts/ui/main_menu.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/ui/new notebook/image.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/ui/b_exit.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/ui/fon_1.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/ui/b_play.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/ui/b_titri.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/ui/b_settings.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/ui/b_ok.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/ui/text_sound_1.png" type="Texture" id=10]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MarginContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/TextureRect/MarginContainer"]
margin_left = 20.0
margin_right = 1820.0
margin_bottom = 1060.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/TextureRect/MarginContainer/VBoxContainer"]
margin_right = 1800.0
margin_bottom = 700.0
size_flags_vertical = 2

[node name="Control" type="Control" parent="CanvasLayer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 1396.0
margin_bottom = 700.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 1400.0
margin_right = 1800.0
margin_bottom = 700.0
rect_min_size = Vector2( 400, 700 )
texture = ExtResource( 5 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 30
custom_constants/margin_top = 260
custom_constants/margin_left = 30
custom_constants/margin_bottom = 10

[node name="buttons" type="VBoxContainer" parent="CanvasLayer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/TextureRect/MarginContainer"]
margin_left = 30.0
margin_top = 260.0
margin_right = 370.0
margin_bottom = 690.0
custom_constants/separation = 20

[node name="play" type="TextureRect" parent="CanvasLayer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/TextureRect/MarginContainer/buttons"]
margin_right = 340.0
margin_bottom = 85.0
rect_min_size = Vector2( 340, 85 )
texture = ExtResource( 6 )
expand = true

[node name="settings" type="TextureRect" parent="CanvasLayer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/TextureRect/MarginContainer/buttons"]
margin_top = 105.0
margin_right = 340.0
margin_bottom = 190.0
rect_min_size = Vector2( 0, 85 )
texture = ExtResource( 8 )
expand = true

[node name="titri" type="TextureRect" parent="CanvasLayer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/TextureRect/MarginContainer/buttons"]
margin_top = 210.0
margin_right = 340.0
margin_bottom = 295.0
rect_min_size = Vector2( 0, 85 )
texture = ExtResource( 7 )
expand = true

[node name="exit" type="TextureRect" parent="CanvasLayer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/TextureRect/MarginContainer/buttons"]
margin_top = 315.0
margin_right = 340.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 85 )
texture = ExtResource( 4 )
expand = true

[node name="settings" type="VBoxContainer" parent="CanvasLayer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/TextureRect/MarginContainer"]
visible = false
margin_left = 30.0
margin_top = 260.0
margin_right = 370.0
margin_bottom = 690.0

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/TextureRect/MarginContainer/settings"]
margin_right = 340.0
margin_bottom = 85.0
rect_min_size = Vector2( 340, 85 )
texture = ExtResource( 1 )
expand = true

[node name="HSlider" type="HSlider" parent="CanvasLayer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/TextureRect/MarginContainer/settings"]
margin_top = 89.0
margin_right = 340.0
margin_bottom = 105.0
min_value = -30.0
max_value = 1.0
value = -3.0

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/TextureRect/MarginContainer/settings"]
modulate = Color( 0.729412, 0, 0, 0 )
margin_top = 109.0
margin_right = 340.0
margin_bottom = 113.0

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/TextureRect/MarginContainer/settings"]
margin_top = 117.0
margin_right = 340.0
margin_bottom = 202.0
rect_min_size = Vector2( 340, 85 )
texture = ExtResource( 10 )
expand = true

[node name="HSlider2" type="HSlider" parent="CanvasLayer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/TextureRect/MarginContainer/settings"]
margin_top = 206.0
margin_right = 340.0
margin_bottom = 222.0
min_value = -30.0
max_value = 1.0
value = -3.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/TextureRect/MarginContainer/settings"]
margin_top = 226.0
margin_right = 340.0
margin_bottom = 291.0
custom_constants/margin_bottom = 65

[node name="ok" type="TextureRect" parent="CanvasLayer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/TextureRect/MarginContainer/settings"]
margin_top = 295.0
margin_right = 340.0
margin_bottom = 380.0
rect_min_size = Vector2( 340, 85 )
texture = ExtResource( 9 )
expand = true

[connection signal="gui_input" from="CanvasLayer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/TextureRect/MarginContainer/buttons/play" to="." method="_on_play_gui_input"]
[connection signal="gui_input" from="CanvasLayer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/TextureRect/MarginContainer/buttons/settings" to="." method="_on_settings_gui_input"]
[connection signal="gui_input" from="CanvasLayer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/TextureRect/MarginContainer/buttons/titri" to="." method="_on_titri_gui_input"]
[connection signal="gui_input" from="CanvasLayer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/TextureRect/MarginContainer/buttons/exit" to="." method="_on_exit_gui_input"]
[connection signal="value_changed" from="CanvasLayer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/TextureRect/MarginContainer/settings/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="drag_ended" from="CanvasLayer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/TextureRect/MarginContainer/settings/HSlider2" to="." method="_on_HSlider2_drag_ended"]
[connection signal="drag_started" from="CanvasLayer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/TextureRect/MarginContainer/settings/HSlider2" to="." method="_on_HSlider2_drag_started"]
[connection signal="value_changed" from="CanvasLayer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/TextureRect/MarginContainer/settings/HSlider2" to="." method="_on_HSlider2_value_changed"]
[connection signal="gui_input" from="CanvasLayer/MarginContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/TextureRect/MarginContainer/settings/ok" to="." method="_on_ok_gui_input"]
